@@ -18,7 +18,6 @@
 /*.tar.xz
 /Makefile
 /TAGS
-/accelerometer
 /ata_id
 /bootctl
 /build-aux
