@@ -29,6 +29,7 @@ NEW CHANGES:
              (+) remove systemd-efi-boot-generator program;
              (+) move cdrom_id to separate module udev;
              (+) move v4l_id to separate module udev;
+             (+) move accelerometer to separate module udev;
         * tests:
              (+) move test-udev to separate module udev;
              (+) move test-libudev to separate module udev;
